--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,3 @@
-<!-- <html>
-<head>
-
-<script type="text/javascript">
-function foo() {
-    theApplet = document.getElementById("app");
-    document.getElementById("display").innerHTML = theApplet.run("hello");
-}
-</script>
-
-</head>
-<body>
-
-<applet id="app" width=0 height=0 code="jswebtest.class"></applet>
-<form>
-    <p><input type="button" onclick="javascript:foo()" value="ok"></input></p>
-</form>
-<div id="display"></div>
-
-</body>
-</html> -->
 <html>  
 <head>  
 <title>Euchre</title>  
@@ -34,7 +13,8 @@ function foo() {
 		outline:0;  
 		border:1px solid #000;  
 		margin-left: auto;  
-		margin-right: auto;  
+		margin-right: auto;
+		background-image:url('images/bg.png');
 	}  
 </style>
 <form id="player1" title="John Smith / Player1"></form>
@@ -44,6 +24,8 @@ function foo() {
 </head>
 <body>  
 <canvas id='c' width='640' height='640'></canvas>
+<script src="fbnetworking.js"></script>
+<script src="fbcardclasses.js"></script>
 <script src="fbeuchre.js"></script>
 </body>  
 </html>  
