Renamed fbeuchre.js -> fbgame.js, Added Main Menu (Buttons Don't Work Yet)

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 <canvas id='c' width='640' height='640'></canvas>
 <script src="fbnetworking.js"></script>
 <script src="fbcardclasses.js"></script>
-<script src="fbeuchre.js"></script>
+<script src='fbmenu.js'></script>
+<script src="fbgame.js"></script>
 </body>  
 </html>  
