More server functionality

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,14 @@
 <form id="player3" title="John Smith / Player3"></form>
 <form id="player4" title="John Smith / Player4"></form>
 </head>
-<body>  
+<body> 
+<div id="fb-root"></div> 
 <canvas id='c' width='640' height='640'></canvas>
+<script src="fbload.js"></script>
 <script src="fbnetworking.js"></script>
 <script src="fbcardclasses.js"></script>
 <script src='fbmenu.js'></script>
+<script src="fbwaitscreen.js"></script>
 <script src="fbgame.js"></script>
 </body>  
 </html>  
