--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,7 @@
 <head>  
 <title>Euchre</title>  
 <link REL="SHORTCUT ICON" HREF="images/favicon.png">
-<script src="/public/socket.io.js"></script>
-<script>
-	var socket = io.connect('http://localhost');
-	socket.on('/newgame', function (data) {
-		//console.log(data);
-		socket.emit('my other event', { my: 'data' });
-	});
-</script>
+<script src="/socket.io/socket.io.js"></script>
 <style>  
 	body {  
 		margin:0px;  
